{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 21,
  "lineage": "aefe7d32-ad42-b6d9-3f77-1a9931b141e7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "company_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:security-group/sg-09a5b1b1dfac6c824",
            "description": "Allow jenkins inbound and  outbound  traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a5b1b1dfac6c824",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "company_traffic",
            "name_prefix": "",
            "owner_id": "917392261231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "company_SG"
            },
            "tags_all": {
              "Name": "company_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03304d1504d55ff0b"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_eip",
      "name": "company",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09141dd041962adb8",
            "domain": "vpc",
            "id": "eipalloc-09141dd041962adb8",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-200-146.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.200.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "company"
            },
            "tags_all": {
              "Name": "company"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "company",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:internet-gateway/igw-0eec2e1ed564520b6",
            "id": "igw-0eec2e1ed564520b6",
            "owner_id": "917392261231",
            "tags": {
              "Name": "company"
            },
            "tags_all": {
              "Name": "company"
            },
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "company",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09141dd041962adb8",
            "association_id": "eipassoc-0aa72c4dc0f54a70f",
            "connectivity_type": "public",
            "id": "nat-09de9ba3e3f47523f",
            "network_interface_id": "eni-0886233e265943fdf",
            "private_ip": "10.0.1.159",
            "public_ip": "3.17.200.146",
            "subnet_id": "subnet-08151c7f7aaba7804"
          },
          "dependencies": [
            "module.company.aws_eip.company",
            "module.company.aws_subnet.public1",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07eead5d40f8be32e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09de9ba3e3f47523f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07eead5d40f8be32e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.company.aws_eip.company",
            "module.company.aws_nat_gateway.company",
            "module.company.aws_route_table.private",
            "module.company.aws_subnet.public1",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eec2e1ed564520b6",
            "id": "r-rtb-02ed299e70ceb09ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02ed299e70ceb09ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.company.aws_internet_gateway.company",
            "module.company.aws_route_table.public",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:route-table/rtb-07eead5d40f8be32e",
            "id": "rtb-07eead5d40f8be32e",
            "owner_id": "917392261231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:route-table/rtb-02ed299e70ceb09ab",
            "id": "rtb-02ed299e70ceb09ab",
            "owner_id": "917392261231",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e28ed95e3f3fa76",
            "route_table_id": "rtb-07eead5d40f8be32e",
            "subnet_id": "subnet-01125b0f4310b0f4e"
          },
          "dependencies": [
            "module.company.aws_route_table.private",
            "module.company.aws_subnet.private2",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e528e2cb751fb7a",
            "route_table_id": "rtb-02ed299e70ceb09ab",
            "subnet_id": "subnet-08151c7f7aaba7804"
          },
          "dependencies": [
            "module.company.aws_route_table.public",
            "module.company.aws_subnet.public1",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03487654ad00305dd",
            "route_table_id": "rtb-02ed299e70ceb09ab",
            "subnet_id": "subnet-03170eef7377d3abc"
          },
          "dependencies": [
            "module.company.aws_route_table.public",
            "module.company.aws_subnet.public2",
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:subnet/subnet-0dccf3c1b744ecef3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dccf3c1b744ecef3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917392261231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:subnet/subnet-01125b0f4310b0f4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01125b0f4310b0f4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "917392261231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:subnet/subnet-08151c7f7aaba7804",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08151c7f7aaba7804",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "917392261231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:subnet/subnet-03170eef7377d3abc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03170eef7377d3abc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "917392261231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0048314e541dd99fc"
          },
          "dependencies": [
            "module.company.aws_vpc.company"
          ]
        }
      ]
    },
    {
      "module": "module.company",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "company",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:917392261231:vpc/vpc-0048314e541dd99fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bc122660cbd01066",
            "default_route_table_id": "rtb-0183168aceaf71d5b",
            "default_security_group_id": "sg-005d76c81950156b4",
            "dhcp_options_id": "dopt-03f9ed9357199e98e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0048314e541dd99fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0183168aceaf71d5b",
            "owner_id": "917392261231",
            "tags": {
              "Name": "company"
            },
            "tags_all": {
              "Name": "company"
            }
          }
        }
      ]
    }
  ]
}